2013-06-15  Ben Elliston  <bje@gnu.org>

	* configure.ac: If DEJAGNU is unset, set it to /dev/null.
	* Makefile.am: Export DEJAGNU.
	* configure: Likewise.
	* Makefile.in: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix typos.
	* doc/ref.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix number of columns in table.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix rendering errors around programlisting.
	* doc/ref.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix spacing before productname.
	* doc/dejagnu.texi: Regenerate.

2013-06-12  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* testsuite/runtest.all/default_procs.tcl (send_log): Use the
	magic "args" parameter name, as expect send_log proc accepts -- as
	a leading option.

2013-06-08  Makoto Fujiwara  <makoto@ki.nu>

	* Makefile.am (pkgdata_DATA): Rename from pkgdata_SCRIPTS.
	(config_DATA): Likewise for config_SCRIPTS.
	(baseboard_DATA): Likewise for baseboard_SCRIPTS.
	(EXTRA_DIST): Remove pkgdata_SCRIPTS, config_SCRIPTS and
	baseboard_SCRIPTS.
	* Makefile.in: Regenerate.

2013-06-08  Ben Elliston  <bje@gnu.org>

	* configure: Regenerate with autoconf 2.69.
	* aclocal.m4: Regenerate.

2013-03-31  Ben Elliston  <bje@gnu.org>

	* Makefile.am (html-local): Rename target from html.
	* Makefile.in: Regenerate with automake 1.12.6.
	* aclocal.m4: Likewise.
	* configure: Regenerate.

2013-03-28  Gilles Espinasse  <g.esp@free.fr>

	* TODO: Remove todo item about warncnt and errcnt.

2013-03-28  Gilles Espinasse  <g.esp@free.fr>

	* testsuite/lib/libsup.exp (make_defaults_file): Only set $tool once.

2013-03-26  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2013-02-12.
	* config.sub: Likewise.
