@@ -233,6 +233,7 @@ TESTSUITE_FILES = \
 	testsuite/runtest.all/clone_output.test \
 	testsuite/runtest.all/config.test \
 	testsuite/runtest.all/default_procs.tcl \
+	testsuite/runtest.all/load_lib.exp \
 	testsuite/config/default.exp \
 	testsuite/lib/libsup.exp \
 	testsuite/lib/util-defs.exp \
